--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<script src="./js/jquery-3.1.1.min.js"></script>
-	<script src="./js/index.js"></script>
-	<link rel="stylesheet" href="./css/index.css">
-</head>
-
-<body>
-	<div class="box">
-		hello world
-	</div>
-</body>
-
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <meta charset="utf-8">	<meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+		<link rel="icon" href="https://static.jianshukeji.com/hcode/images/favicon.ico">
+		<link rel="stylesheet" href="./css/new.css">
+        <style>
+            /* css 代码  */
+        </style>
+        <script src="https://code.highcharts.com.cn/gantt/highcharts-gantt.js"></script>
+        <script src="https://code.highcharts.com.cn/highcharts/modules/exporting.js"></script>
+    </head>
+    <body>
+        <div id="container"></div>
+        <script>
+            // JS 代码 
+        </script>
+    </body>
 </html>
