--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <script src="https://code.highcharts.com.cn/highcharts/modules/exporting.js"></script>
     </head>
     <body>
-        <div id="container"></div>
+        <div id="box">
+            <div class="head">
+
+            </div>
+            <div class="main">
+                <ul>111</ul>
+            </div>
+        </div>
         <script>
             // JS 代码 
         </script>
