--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 		<link rel="icon" href="https://static.jianshukeji.com/hcode/images/favicon.ico">
 		<link rel="stylesheet" href="./css/new.css">
+		<link rel="stylesheet" href="./css/compatibility.css">
         <style>
             /* css 代码  */
         </style>
@@ -13,8 +14,10 @@
     </head>
     <body>
         <div id="box">
-            <div class="head">
-
+            <div class="head clearfix">
+                <div class="editor fl">1</div>
+                <div class="name fl">2</div>
+                <div class="currentTime fl">3</div>
             </div>
             <div class="main">
                 <ul>111</ul>
